add: MySQL索引、Spring循环依赖